[project]
name = "prob"
version = "0.1.0"
description = ""
authors = [
    {name = "sebDtSci",email = "sebastientadiello@gmail.con"}
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "bleak (==0.21.1)",
    "flask (>=3.1.3,<4.0.0)"
]

[tool.poetry]
packages = [{include = "prob", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
